feat(记录): 实现智能记录编辑功能与周期结束确认
新增记录编辑模式，自动检测并填充已有记录数据
重构记录底部弹窗，统一处理新建、编辑和症状记录场景
添加周期结束确认对话框，防止误操作
更新文档说明智能记录判断逻辑和状态管理规范
移除冗余的NewCycleBottomSheet和NewSymptomBottomSheet组件

--- a/docs/开发指南与开发规范.md
+++ b/docs/开发指南与开发规范.md
@@ -884,9 +884,15 @@ data class HomeUiState(
     val currentCycle: Cycle? = null,
     val prediction: Prediction? = null,
     val recentRecords: List<DailyRecord> = emptyList(),
+    val hasCurrentCycle: Boolean = false,
     val error: String? = null
 )
 ```
+
+**说明**：
+- `hasCurrentCycle`：用于判断是否有当前活跃的周期，基于 `Cycle.isCompleted` 字段
+- 当 `hasCurrentCycle` 为 `true` 时，FAB 显示"结束周期"和"修改记录"选项
+- 当 `hasCurrentCycle` 为 `false` 时，FAB 显示"新建周期"和"记录症状"选项
 
 #### 7.1.2 UiEvent 密封类
 ```kotlin
@@ -1063,7 +1069,53 @@ fun MyComposable(
 }
 ```
 
-#### 8.2.2 状态提升原则
+#### 8.2.2 记录弹窗实现规范
+
+**RecordBottomSheet 实现要点**：
+
+1. **智能判断模式**：
+   - 根据当前日期是否有记录，自动切换到编辑模式或新增模式
+   - 编辑模式显示"编辑记录"标题，自动填充已有数据
+
+2. **参数设计**：
+```kotlin
+@Composable
+fun RecordBottomSheet(
+    initialDate: LocalDate = LocalDate.now(),
+    initialFlowLevel: FlowLevel? = null,
+    initialSymptoms: List<Symptom> = emptyList(),
+    initialNotes: String? = null,
+    recordMode: RecordMode = RecordMode.AUTO,
+    hasCurrentCycle: Boolean = false,
+    existingRecord: DailyRecord? = null,  // 新增：现有记录参数
+    onDismiss: () -> Unit,
+    onSave: (flowLevel: FlowLevel?, symptoms: List<Symptom>, notes: String?) -> Unit
+)
+```
+
+3. **状态初始化**：
+```kotlin
+var selectedDate by remember { mutableStateOf(existingRecord?.date ?: initialDate) }
+var flowLevel by remember { mutableStateOf(existingRecord?.flowLevel ?: initialFlowLevel) }
+val selectedSymptoms = remember { mutableStateListOf<Symptom>().apply { addAll(existingRecord?.symptoms ?: initialSymptoms) } }
+var notes by remember { mutableStateOf(existingRecord?.notes ?: initialNotes ?: "") }
+```
+
+4. **标题显示逻辑**：
+```kotlin
+Text(
+    text = if (existingRecord != null) {
+        "编辑记录"
+    } else when {
+        hasCurrentCycle -> "记录今日状态"
+        selectedMode == RecordMode.NEW_CYCLE -> "开始新周期"
+        selectedMode == RecordMode.SYMPTOM_ONLY -> "记录症状"
+        else -> "选择记录类型"
+    }
+)
+```
+
+#### 8.2.3 状态提升原则
 ```kotlin
 // 错误示例：状态未提升
 @Composable
